--- a/package.json
+++ b/package.json
@@ -6,18 +6,19 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint . --fix",
+    "format": "prettier --write . && eslint . --fix",
     "clean": "rimraf .next"
   },
   "dependencies": {
     "@tailwindcss/typography": "^0.2.0",
-    "@tailwindcss/ui": "^0.5.0",
+    "@tailwindcss/ui": "^0.6.0",
+    "@tailwindui/react": "^0.1.1",
     "autoprefixer": "^9.8.6",
-    "next": "9.5.3",
+    "next": "9.5.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-transition-group": "^4.4.1",
-    "tailwindcss": "^1.7.6"
+    "tailwindcss": "^1.8.5"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
