--- a/package.json
+++ b/package.json
@@ -10,24 +10,26 @@
     "clean": "rimraf .next"
   },
   "dependencies": {
+    "@headlessui/react": "^0.2.0",
     "@tailwindcss/typography": "^0.2.0",
-    "@tailwindcss/ui": "^0.6.0",
+    "@tailwindcss/ui": "^0.6.2",
     "@tailwindui/react": "^0.1.1",
     "autoprefixer": "^9.8.6",
-    "next": "9.5.3",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
+    "next": "9.5.5",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
     "react-transition-group": "^4.4.1",
-    "tailwindcss": "^1.8.9"
+    "tailwindcss": "^1.9.6"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
-    "eslint": "^7.9.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint": "^7.12.0",
+    "eslint-config-prettier": "^6.14.0",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.20.6",
-    "prettier": "^2.1.1",
+    "eslint-plugin-react": "^7.21.5",
+    "postcss-preset-env": "^6.7.0",
+    "prettier": "^2.1.2",
     "rimraf": "^3.0.2"
   }
 }
