--- a/package.json
+++ b/package.json
@@ -11,25 +11,26 @@
   },
   "dependencies": {
     "@headlessui/react": "^0.2.0",
-    "@tailwindcss/typography": "^0.2.0",
-    "@tailwindcss/ui": "^0.7.2",
+    "@tailwindcss/aspect-ratio": "^0.2.0",
+    "@tailwindcss/forms": "^0.2.1",
+    "@tailwindcss/typography": "^0.3.1",
     "@tailwindui/react": "^0.1.1",
-    "autoprefixer": "^10.0.1",
-    "next": "10.0.1",
+    "autoprefixer": "9",
+    "next": "10.0.3",
+    "postcss": "7",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-transition-group": "^4.4.1",
-    "tailwindcss": "^1.9.6"
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
-    "eslint": "^7.13.0",
-    "eslint-config-prettier": "^6.15.0",
+    "eslint": "^7.15.0",
+    "eslint-config-prettier": "^7.0.0",
     "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-prettier": "^3.2.0",
     "eslint-plugin-react": "^7.21.5",
     "postcss-preset-env": "^6.7.0",
-    "prettier": "^2.1.2",
+    "prettier": "^2.2.1",
     "rimraf": "^3.0.2"
   }
 }
