--- a/package.json
+++ b/package.json
@@ -10,25 +10,27 @@
     "clean": "rimraf .next"
   },
   "dependencies": {
-    "@headlessui/react": "^0.2.0",
+    "@headlessui/react": "^0.3.0",
     "@tailwindcss/aspect-ratio": "^0.2.0",
     "@tailwindcss/forms": "^0.2.1",
-    "@tailwindcss/typography": "^0.3.1",
+    "@tailwindcss/typography": "^0.4.0",
     "@tailwindui/react": "^0.1.1",
-    "autoprefixer": "9",
-    "next": "10.0.3",
-    "postcss": "7",
+    "autoprefixer": "10.2.4",
+    "next": "10.0.6",
+    "postcss": "8.2.5",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat"
+    "tailwindcss": "^2.0.3"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
-    "eslint": "^7.15.0",
-    "eslint-config-prettier": "^7.0.0",
+    "eslint": "^7.19.0",
+    "eslint-config-prettier": "^7.2.0",
+    "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "^3.2.0",
-    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "postcss-preset-env": "^6.7.0",
     "prettier": "^2.2.1",
     "rimraf": "^3.0.2"
