--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "format": "prettier --write . && eslint . --fix",
+    "lint": "prettier --write . && eslint . --fix",
     "clean": "rimraf .next"
   },
   "dependencies": {
@@ -16,21 +16,23 @@
     "@tailwindcss/typography": "^0.4.0",
     "@tailwindui/react": "^0.1.1",
     "autoprefixer": "10.2.4",
-    "next": "10.0.6",
-    "postcss": "8.2.5",
+    "next": "10.0.7",
+    "postcss": "8.2.6",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "tailwindcss": "^2.0.3"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
-    "eslint": "^7.19.0",
-    "eslint-config-prettier": "^7.2.0",
+    "eslint": "^7.21.0",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-html": "^6.1.1",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
     "postcss-preset-env": "^6.7.0",
     "prettier": "^2.2.1",
     "rimraf": "^3.0.2"
