--- a/package.json
+++ b/package.json
@@ -6,16 +6,17 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "export": "next export",
     "lint": "prettier --write . && eslint . --fix",
     "clean": "rimraf .next"
   },
   "dependencies": {
-    "@headlessui/react": "^1.1.0",
+    "@headlessui/react": "^1.1.1",
     "@tailwindcss/aspect-ratio": "^0.2.0",
     "@tailwindcss/forms": "^0.3.2",
     "@tailwindcss/typography": "^0.4.0",
     "@tailwindui/react": "^0.1.1",
-    "next": "10.1.3",
+    "next": "10.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "tailwindcss": "^2.1.2"
