--- a/package.json
+++ b/package.json
@@ -17,13 +17,19 @@
     "@tailwindcss/typography": "^0.4.0",
     "@tailwindui/react": "^0.1.1",
     "next": "10.2.0",
+    "preact": "^10.5.13",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "tailwindcss": "^2.1.2"
   },
   "devDependencies": {
+    "@types/node": "^15.0.2",
+    "@types/react": "^17.0.5",
+    "@typescript-eslint/eslint-plugin": "^4.22.1",
+    "@typescript-eslint/parser": "^4.22.1",
     "autoprefixer": "^10.2.5",
     "babel-eslint": "^10.1.0",
+    "critters": "^0.0.10",
     "eslint": "^7.26.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-html": "^6.1.2",
@@ -33,8 +39,9 @@
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
-    "postcss": "^8.2.14",
+    "postcss": "^8.2.15",
     "prettier": "^2.3.0",
-    "rimraf": "^3.0.2"
+    "rimraf": "^3.0.2",
+    "typescript": "^4.2.4"
   }
 }
