--- a/package.json
+++ b/package.json
@@ -16,21 +16,23 @@
     "@tailwindcss/forms": "^0.3.3",
     "@tailwindcss/typography": "^0.4.1",
     "@tailwindui/react": "^0.1.1",
-    "next": "10.2.3",
+    "next": "11.0.0",
     "preact": "^10.5.13",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "tailwindcss": "^2.1.4"
   },
   "devDependencies": {
-    "@types/node": "^15.12.1",
-    "@types/react": "^17.0.9",
-    "@typescript-eslint/eslint-plugin": "^4.26.0",
-    "@typescript-eslint/parser": "^4.26.0",
+    "@next/eslint-plugin-next": "^11.0.0",
+    "@types/node": "^15.12.2",
+    "@types/react": "^17.0.11",
+    "@typescript-eslint/eslint-plugin": "^4.27.0",
+    "@typescript-eslint/parser": "^4.27.0",
     "autoprefixer": "^10.2.6",
     "babel-eslint": "^10.1.0",
     "critters": "^0.0.10",
-    "eslint": "^7.27.0",
+    "eslint": "^7.28.0",
+    "eslint-config-next": "^11.0.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-html": "^6.1.2",
     "eslint-plugin-import": "^2.23.4",
@@ -39,8 +41,8 @@
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
-    "postcss": "^8.3.0",
-    "prettier": "^2.3.0",
+    "postcss": "^8.3.4",
+    "prettier": "^2.3.1",
     "rimraf": "^3.0.2",
     "typescript": "^4.3.2"
   }
